# swap

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  registry.json
docs/: agents.md
docs/superpowers/plans/: 2026-04-30-swap-core-implementation.md
docs/superpowers/specs/: 2026-04-30-swap-core-architecture-design.md  2026-04-30-swap-devenv-design.md
swap/: cli.py
swap/builtin/agents/: cli.py  core.py
swap/builtin/plugins/: cli.py
swap/builtin/ssh/: cli.py  core.py
swap/core/: config.py  plugin_manager.py  registry.py  style.py  upgrade.py
tests/builtin/agents/: test_cli.py  test_core.py
tests/builtin/plugins/: test_cli.py
tests/builtin/ssh/: test_core.py
tests/core/: test_config.py  test_plugin_manager.py  test_registry.py
