[project]
name = "swap"
version = "0.3.0"
description = "Personal utilities CLI, extensible via plugins"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "tomli-w>=1.0",
]

[project.scripts]
swap = "swap.cli:cli"

[project.entry-points."swap.plugins"]
plugins = "swap.builtin.plugins.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "swap-ssh",
    "swap-agents",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
swap-ssh = { workspace = true }
swap-agents = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages/swap-ssh/tests", "packages/swap-agents/tests"]
addopts = "--import-mode=importlib"
